# gen3-dev

./: .gitignore  LICENSE  README.md  default_values.yaml  init-db.sh  netshoot-pod.yaml
bash/: data_upload_monitor.sh
cert-manager/: cert-manager-v1.14.2.yaml  letsencrypt-job.yaml  prod-issuer.yaml  staging-issuer.yaml  zerossl-eab-secret.yaml
data_dictionary_templates/: default_schema.json  test_schema.json
documentation/: adding_a_worker_node.md  adding_and_removing_a_worker_node.md  cert-manager_with_godaddy_and_lets_encrypt.md  cert-manager_with_zero_ssl.md  custom_domain_name_for_gen3_instance.md  debugging_networking_issues.md  flushing_iptables_rules.md  minio_on_kubernetes_cluster.md  minio_on_single_linux_node.md  modifying_fence_config_file.md  monitoring_and_alerting.md  persistent_storage.md  postgres_database_in_docker.md  sealed_secrets.md  setting_up_nginx.md  setting_up_rabbitmq.md  updating_curl_and_openssl.md  upgrading_k3s_version.md  upgrading_traefik_ingress_controller.md  useful_tools.md
gen3/: base_user.yaml  datadictionary.json  example-ingress.yaml  gen3-certs.yaml  grafana.yaml  nginx.conf  revproxy-dev.ec2.yaml  revproxy-dev.yaml  ssjdispatcher-rolebinding.yaml  tls.crt  tls.key  user.old.yaml  user.yaml  useryaml-configmap.yaml  useryaml-job.yaml  (+1 more)
gen3-minio-client/: README.md  pyproject.toml  requirements.txt  setup.py
gen3-minio-client/gen3minioclient/: __init__.py  cli.py  gen3api.py  gen3client.py  gen3minioclient.py  main.py  minioclient.py
gen3-minio-client/scripts/: create_indexd_manifest.py  get_minio_presigned_url.py
(+153 files in other folders)
