[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "gen3-minio-client"
version = "0.0.1"
authors = [
  { name="RWCannell", email="regancannell@gmail.com" },
]
description = "An application for interacting with a Gen3 instance and an on-prem MinIO bucket."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/RWCannell/gen3-minio-client"
Issues = "https://github.com/RWCannell/gen3-minio-client/issues"